glx/testdata/invalid/broken-references/sources/source-parish-register.glx
sources:
  source-parish-leeds:
    title: "St. Paul's Parish Register - Leeds"
    type: church_register
    repository: repository-leeds-library
    date: "1849-1900"
    description: "Parish register containing baptisms, marriages, and burials for St. Paul's Church, Leeds"
